<resources>
    <string name="app_name">Login Design</string>
    <string name="log_in">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="manage_your_car_service">manage your service</string>
    <string name="smart_work">Smart Work</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="cmt">Helo here Register to Continue</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="password">Password</string>
    <string name="is_you_shop_owner">Is you Shop Owner</string>
    <string name="btnregister">REGISTER</string>
    <string name="create_your_account">Create your account</string>
    <string name="your_name">YOUR NAME</string>
    <string name="email">EMAIL</string>
    <string name="register1">Register</string>
    <string name="login">Login</string>
    <string name="sign_to_your_account">Sign to your account</string>
    <string name="your_email">YOUR EMAIL</string>
    <string name="your_password">YOUR PASSWORD</string>
    <string name="sample_gmail">sample@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="mini_headline">Mini Headline</string>
    <string name="popular">Popular</string>
    <string name="today">Today</string>
    <string name="trending">Trending</string>
    <string name="treanding">Treanding</string>
    <string name="favourite">Favourite</string>
    <string name="download">Download</string>
    <string name="content">Content</string>
    <string name="preferences">Preferences</string>
    <string name="darkmode">Darkmode</string>
    <string name="only_download_via_wifi">Only Download via Wifi</string>
    <string name="notification">notification</string>
    <string name="next">next</string>
    <string name="language">Language</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="_91_123456789">+91 123456789</string>
</resources>