<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:id="@+id/layoutMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:id="@+id/txtRegister"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:id="@+id/txtWelcome"
        android:layout_below="@+id/txtRegister"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cmt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/txtCmt"
        android:layout_below="@+id/txtWelcome"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cmt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/txtName"
        android:layout_below="@+id/txtCmt"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:layout_marginTop="20dp"
            android:id="@+id/edtName"
            android:layout_marginStart="50dp"
            android:background="@color/white"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName">
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtName"
            android:layout_marginTop="20dp"
            android:id="@+id/edtLastname"
            android:layout_marginStart="230dp"
            android:background="@color/white"
            />



    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phonenumber"
        android:layout_below="@+id/txtName"
        android:id="@+id/txtPhonenumber"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/txtPhonenumber">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPhonenumber"
            android:layout_marginTop="20dp"
            android:id="@+id/edtPhone"
            android:layout_marginStart="50dp"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:id="@+id/txtPassword"
        android:layout_below="@id/txtPhonenumber"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/txtPassword">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPhonenumber"
            android:layout_marginTop="20dp"
            android:id="@+id/edtPassword"
            android:layout_marginStart="50dp"
            android:background="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_you_shop_owner"
        android:layout_below="@+id/txtPassword"
        android:id="@+id/txtOwner"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtOwner"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"
        android:text="@string/btnregister"
        android:backgroundTint="@color/blue"
        />

</RelativeLayout>